Updated footer in index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Welcome to my website.
+		    Welcome to my website. Face is WIP. -Brian
 	    </footer>
 	</body>
 </html>
