--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Welcome to my website. Face is WIP. -Brian
+		    Welcome to my website. - Brian
 	    </footer>
+		    <form>
+		    	Face size:<br>
+		    	<input type = "text" name = "size"
+		    </form>
 	</body>
 </html>
