Updated form format in index.html

--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Welcome to my website. - Brian
+		    Welcome to my website. -Brian <br>
 	    </footer>
 		    <form>
-		    	Face size:<br>
-		    	<input type = "text" name = "size"
+		    	Face size: <input type = "text" name = "size">
 		    </form>
 	</body>
 </html>
