Update form format in index.html

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Welcome to my website. -Brian <br>
+		    Welcome to my website. -Brian
 	    </footer>
 		    <form>
-		    	Face size: <input type = "text" name = "size">
+		    	<br> Face size: <input type = "text" name = "size">
 		    </form>
 	</body>
 </html>
