Removed form in index.html

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 	    <footer>
 		    Welcome to my website. -Brian
 	    </footer>
-		    <form>
+<!-- 		    <form>
 		    	<br> Face size: <input type = "text" name = "size">
-		    </form>
+		    </form> -->
 	</body>
 </html>
