--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 		</header>
 			<section id="content">
 				<canvas id="OriginalDesign" data-processing-sources="OriginalDesign.pde">
-						id="Ball" data-processing-sources="Ball.pde"
+				</canvas>
+				<canvas id="Ball" data-processing-sources="Ball.pde">
 				</canvas>
 		    </section>
 	    <footer>
