Changed footer in index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Click on the canvas to spawn a ball! - Brian T
 	    </footer>
 	</body>
 </html>
