Added random direction spawning and more footer intructions.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Click on the canvas to spawn a ball! - Brian T
+		    <p>CLICK on the canvas to spawn a ball.</p>
+			<p>Press SPACEBAR to Pause/Play animation.</p>
+						<p>- Brian T</p>
 	    </footer>
 	</body>
 </html>
