Added reset background on right click

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Click to reset canvas - Brian T
+		    LEFT click to summon a lightning bolt! RIGHT click to reset. - Brian T
 	    </footer>
 	</body>
 </html>
