Added footer to index.html.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    <p>Simulates the rolling of dice.</p>
+			<p><b>CONTROLS:</b><br>
+			Left Click <b>|</b> Roll the Dice<br>
+			W/S <b>|</b> Decrease/Increase # of Rows<br>
+			A/D <b>|</b> Decrease/Increase # of Columns<br>
+			Q/E <b>|</b> Decrease/Increase Size of Dice</p>
+			<p>- Brian T</p>
 	    </footer>
 	</body>
 </html>
