Updated comments and changed background image.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    <p>Simulates the rolling of dice.</p>
+		    <p>Simulates the rolling of dice.<br>
+			(Be sure to click on the canvas first!)</p>
 			<p><b>CONTROLS:</b><br>
 			Left Click <b>|</b> Roll the Dice<br>
 			W/S <b>|</b> Decrease/Increase # of Rows<br>
