Update footer name.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Welcome to my website. -Brian
+		    Welcome to my website. -Brian Tom
 	    </footer>
 	</body>
 </html>
