--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    <p>CLICK on the canvas to spawn a ball.</p>
-			<p>Press SPACEBAR to Pause/Play animation.</p>
-						<p>- Brian T</p>
+		    <p>CLICK on the canvas to spawn a ball.<br>
+		    Press SPACEBAR to Pause/Play animation.</p>
+		    <p>-Brian Tom</p>
 	    </footer>
 	</body>
 </html>
