Updated footer name and formatting.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    LEFT click to summon a lightning bolt! RIGHT click to reset. - Brian T
+		    LEFT click to summon a lightning bolt! RIGHT click to reset.<br>
+		    -Brian Tom
 	    </footer>
 	</body>
 </html>
