Updated footer name.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			W/S <b>|</b> Decrease/Increase # of Rows<br>
 			A/D <b>|</b> Decrease/Increase # of Columns<br>
 			Q/E <b>|</b> Decrease/Increase Size of Dice</p>
-			<p>- Brian T</p>
+			<p>- Brian Tom</p>
 	    </footer>
 	</body>
 </html>
