--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    - Brian Tom
+			Click to attract bacteria! - Brian Tom
 	    </footer>
 	</body>
 </html>
