--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 		    </section>
 	    <footer>
 			CONTROLS:<br>
-		    WASD - control the spaceship<br>
+			WASD - control the spaceship<br>
 			CTRL - slow down spaceship<br>
+			F - hyperspace<br>
 			<br>
 			- Brian Tom
 	    </footer>
