--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 		    </section>
 	    <footer>
 			CONTROLS:<br>
-			WASD - control the spaceship<br>
+			W - accelerate forwards<br>
+			A/D - rotate<br>
 			CTRL - slow down spaceship<br>
 			F - hyperspace<br>
 			<br>
