--- a/index.html
+++ b/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Asteroids Game</title>
+		<title>Sierpinski Triangle</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Asteroids Game</h1>
+			<h1>Sierpinki Triangle</h1>
 		</header>
 			<section id="content">
-				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde">
+				<canvas id="Sierpinski" data-processing-sources="SierpinskiTriangle.pde">
 				</canvas>
 		    </section>
 	    <footer>
 			CONTROLS:<br>
-			W - accelerate forwards<br>
-			A/D - rotate<br>
-			CTRL - slow down spaceship<br>
-			F - hyperspace<br>
+			LEFT MOUSE - zoom in<br>
+			RIGHT MOUSE - zoom out<br>
+			LEFT ARROW - decrease density<br>
+			RIGHT ARROW - increase density<br>
 			<br>
 			- Brian Tom
 	    </footer>
