--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 			RIGHT MOUSE - zoom out<br>
 			LEFT ARROW - decrease density<br>
 			RIGHT ARROW - increase density<br>
+			R - reset <br>
 			<br>
 			- Brian Tom
 	    </footer>
