--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+	    	Find all the bombs!<br>
+	    	CONTROLS:<br>
+	    	LEFT CLICK: uncover square<br>
+	    	RIGHT CLICK: mark square<br>
+	    	<br>
+		    - Brian Tom
 	    </footer>
 	</body>
 </html>
