--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-	    	Find all the bombs!<br>
+	    	Find all the mines!<br>
 	    	CONTROLS:<br>
 	    	LEFT CLICK: uncover square<br>
 	    	RIGHT CLICK: mark square<br>
