Update processing.js uri

--- a/projects/SnowflakeCatcher/index.html
+++ b/projects/SnowflakeCatcher/index.html
@@ -5,7 +5,7 @@
 		<title>Snow Catcher</title>
 		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
-		<script src="processing.js"></script>
+		<script src="../../lib/processing.js"></script>
 	</head>
 	<body>
 		<header>
