--- a/projects/Dice/index.html
+++ b/projects/Dice/index.html
@@ -4,7 +4,7 @@
 		<title>Dice</title>
 		<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
-		<script src="processing.js"></script>
+		<script src="../../lib/processing.js"></script>
 	</head>
 	<body>
 		<header>
