--- a/projects/FractalTree/index.html
+++ b/projects/FractalTree/index.html
@@ -4,7 +4,7 @@
 		<title>Fractal Tree</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
-		<script src="processing.js"></script>
+		<script src="../../lib/processing.js"></script>
 	</head>
 	<body>
 		<header>
