--- a/projects/Minesweeper/index.html
+++ b/projects/Minesweeper/index.html
@@ -4,7 +4,7 @@
 		<title>Minesweeper</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
-		<script src="processing.js"></script>
+		<script src="../../lib/processing.js"></script>
 		<script src="Guido.js" type="text/javascript"></script>
 	</head>
 	<body>
